--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Personal portfolio website, fonts and images were NOT created by me but provided by the respective authors. More information in the source files.
+Personal portfolio website - fonts, images, and layout were NOT created by me - but provided by the respective authors. More information in the source files.
